# cobalto

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yaml  ci.yml  deploy.yaml  infra.yml
docs/api/: openapi.yaml
docs/architecture/: README.md  api-contracts.md  context-engine.md  data-architecture.md  infrastructure.md  network-topology.md  overview.md  playbook-engine.md  security-architecture.md  services.md  silver-agents.md  supervisor.md
docs/architecture/adrs/: ADR-001-langgraph.md  ADR-002-n8n.md  ADR-003-opencti.md  ADR-004-wazuh.md  ADR-005-qdrant.md  ADR-006-thehive-cortex.md  ADR-007-vault.md  ADR-008-grafana.md  ADR-009-kubernetes.md
docs/architecture/service-architecture/: cobalt-console.md  cobalt-mdr-ops.md  integration-patterns.md  langgraph-agent.md
docs/context/: business-context.md  domain-model.md  regulatory-landscape.md  stakeholder-map.md
docs/developer/: architecture-walkthrough.md  local-setup.md
docs/development/: contributing.md  getting-started.md  testing.md
docs/dtp/: ai-ethics-soc.md  cost-governance.md  design-principles.md  operational-principles.md  security-principles.md
docs/framework/: deployment-framework.md  langgraph-patterns.md  n8n-playbook-framework.md  testing-strategy.md
docs/operations/: runbook-elasticsearch.md  runbook-langgraph.md  runbook-n8n.md  runbook-opencti.md  runbook-qdrant.md  runbook-vault.md  runbook-wazuh.md
docs/runbooks/: atomic-red-team.md  deployment.md  incident-response.md  load-testing.md
frameworks/context-engine/: pyproject.toml
frameworks/context-engine/src/cobalto/context/: __init__.py  context_package.py  intelligence.py  memory.py  operational.py  policy.py  semantic.py
frameworks/context-engine/tests/: __init__.py  test_context_package.py
infra/monitoring/prometheus/: prometheus.yml
infra/n8n/workflows/: wazuh-cobalt.json
infra/terraform/: main.tf  variables.tf
infrastructure/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
kubernetes/base/: kustomization.yaml
kubernetes/base/rbac/: langgraph-clusterrole.yaml  langgraph-clusterrolebinding.yaml  rbac-kustomization.yaml
kubernetes/base/secrets/: external-secrets-template.yaml
kubernetes/cortex/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
kubernetes/elasticsearch/: configmap.yaml  kustomization.yaml  namespace.yaml  service.yaml  statefulset.yaml
kubernetes/grafana/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml
kubernetes/grafana/dashboards/: agent-performance.json  soc-operations.json
kubernetes/langgraph/: deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  seed-mitre-job.yaml  service.yaml
kubernetes/n8n/: configmap-workflows.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret-template.yaml  service.yaml
kubernetes/namespaces/: network-policy-allow-dns.yaml  network-policy-default-deny.yaml  soc-platform.yaml
kubernetes/opencti/: configmap.yaml  connector-mitre-deployment.yaml  kustomization.yaml  namespace.yaml  platform-deployment.yaml  service.yaml  worker-deployment.yaml
kubernetes/qdrant/: configmap.yaml  kustomization.yaml  namespace.yaml  service.yaml  statefulset.yaml
kubernetes/thehive/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
kubernetes/vault/: configmap.yaml  kustomization.yaml  namespace.yaml  persistentvolumeclaim.yaml  service.yaml  statefulset.yaml
kubernetes/wazuh/: configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  indexer-service.yaml  indexer-statefulset.yaml  kustomization.yaml  manager-deployment.yaml  manager-service.yaml  namespace.yaml
playbooks/: alert-ingestion.json  automated-response.json  brute-force-response.yaml  malware-detection-response.yaml  phishing-response.yaml
scripts/: bootstrap.sh  deploy-platform.sh  n8n-import-workflows.sh  n8n-init.sh  requirements-seed.txt  seed-mitre-offline.py  seed-mitre-qdrant.py  validate.sh
scripts/cortex-bootstrap/: cortex-analyzers.json  cortex-init.sh
scripts/thehive-bootstrap/: thehive-init.sh  thehive-templates.json
services/cobalt-console/: Dockerfile  next.config.js  nginx.conf  package.json  tailwind.config.js
services/cobalt-mdr-ops/: __init__.py  reporting.py  scheduling.py  slas.py
services/langgraph/: Dockerfile  main.py
services/langgraph-agent/: main.py  requirements.txt
services/mcp-bridge/: Dockerfile
tests/: atomic_runner.py  conftest.py  test_performance.py
tests/atomic-red-team/: README.md
tests/integration/: test_agents.py  test_api.py  test_workflow.py
tests/load/: load_test.py
tests/unit/: test_agents.py  test_middleware.py  test_state.py  test_tools.py
workflows/n8n/: alert-routing.json  enrichment-pipeline.json  hunt-scheduling.json  response-approval.json  weekly-report.json
(+172 files in other folders)
