[project]
name = "cobalto"
version = "0.1.0"
description = "Agentic SOC/MDR Open Source Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cobalt Team", email = "team@cobalto.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "python-json-logger>=2.0",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "tenacity>=8.3",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-testcontainers>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "safety>=3.2",
]
agent = [
    "langgraph>=0.1.0",
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
]
soar = [
    "n8n-python>=0.1.0",
]
intel = [
    "stix2>=3.0",
    "taxii2-client>=2.2",
    "opencti-python-sdk>=5.6",
]
vector = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
platform = [
    "hvac>=2.1",
    "kubernetes>=29.0",
    "helm>=0.1.0",
]
mcp = [
    "sse-starlette>=2.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "pyjwt>=2.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C4", "PT", "TCH", "SIM", "RET", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RSE", "TID", "PYI", "ASYNC", "QF", "FLY", "INP", "PIE", "TT", "RUF", "LOG", "EXE", "ISC", "ICN", "PERF", "TKA", "C90"]
ignore = ["S101", "S106", "S311", "S603", "S607"]
exclude = [".venv", "venv", ".git", "__pycache__", "build", "dist", ".mypy_cache", ".ruff_cache", "htmlcov", ".pytest_cache", "node_modules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
implicit_reexport = true
enable_error_code = ["attr-defined", "dict-iter", "index", "union-attr", "misc", "no-untyped-def", "no-untyped-call", "return-value", "unused-ignore", "valid-type", "var-annotated"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short --strict-markers --asyncio-mode=auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "requires_docker: Tests requiring Docker",
    "requires_aws: Tests requiring AWS credentials",
]

[tool.coverage.run]
source = ["frameworks", "services", "agents"]
omit = ["*/tests/*", "*/test_*.py", "*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"