[project]
name = "cobalto-langgraph-agent"
version = "0.1.0"
description = "Cobalto SOC/MDR LangGraph Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services/langgraph-agent"]
