[project]
name = "cobalto-context-engine"
version = "0.1.0"
description = "5-layer context engineering for Silver agents (DTP 3.4)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cobalt Team", email = "team@cobalto.io"}
]
dependencies = [
    "pydantic>=2.7",
    "qdrant-client>=1.9",
    "httpx>=0.27",
    "redis>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
